# TheProcessFoundry

./: .gitignore  CNAME  Cargo.toml  README.md  watcher.sh
the_process_foundry/: Cargo.toml  TheProcessFoundry.mdj
the_process_foundry/book/: book.toml
the_process_foundry/book/src/: README.md  SUMMARY.md  glossary.md
the_process_foundry/book/src/apps/: README.md
the_process_foundry/book/src/core/: README.md  api.md  application.md  architecture.md  container.md  flux.md  routing.md  workflow.md
the_process_foundry/book/src/gui/: README.md
the_process_foundry/book/src/systems/: ELK.md  FishheadLabs.md  README.md
the_process_foundry/book/src/use_cases/: database.md  invoicing.md
the_process_foundry/book/src/workflow/: pg_basebackup.md  rebuilder.md
the_process_foundry/docs/: .rustc_info.json
the_process_foundry/docs/doc/: search-index.js  settings.html  source-files.js
the_process_foundry/docs/doc/the_process_foundry/: all.html  fn.bootstrap.html  fn.find.html  fn.get_or_create_volume.html  fn.main.html  index.html  sidebar-items.js  struct.Rc.html  struct.VolumeQuery.html
the_process_foundry/src/: base.rs  error.rs  main.rs  registry.rs
the_process_foundry/src/applications/: mod.rs
the_process_foundry/src/applications/bash/: mod.rs
the_process_foundry/src/applications/docker/: mod.rs
the_process_foundry/src/base/: action.rs  application.rs  container.rs  event.rs  message.rs  mod.rs  shell.rs
the_process_foundry/tests/data/: postgres.docker-compose.yml
the_process_foundry/vscode_templates/: README.md
(+258 files in other folders)
